--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -11,7 +11,7 @@
 }
 
 .dropdown__toggle > i {
-    font-size: 2.5rem;
+    font-size: 20px;
     color: var(--txt-color);
 }
 
@@ -20,14 +20,14 @@
     align-items: center;
     justify-content: center;
     position: absolute;
-    top: -12px;
-    right: -10px;
-    height: 25px;
-    width: 25px;
+    top: -5px;
+    right: -7px;
+    height: 17px;
+    width: 17px;
     border-radius: 50%;
     background-color: var(--main-color);
     color: var(--txt-white);
-    font-size: 0.8rem;
+    font-size: 10px;
 }
 
 .dropdown__content {
