--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -6,6 +6,7 @@
     top: 0;
     background-color: var(--main-bg);
     box-shadow: var(--box-shadow);
+    overflow-y: scroll;
 }
 
 .sidebar__logo {
@@ -16,7 +17,7 @@
 }
 
 .sidebar__logo > img {
-    height: 45px;
+    height: 110px;
 }
 
 .sidebar__item {
